fix: white bar on dark mode at bottom of index page

--- a/src/pages/Index.module.css
+++ b/src/pages/Index.module.css
@@ -11,7 +11,7 @@
 .footer {
   color: var(--c-bg-contrast-light);
   text-align: center;
-  margin: calc(2 * var(--m-xl)) 0 var(--m-xl);
+  padding: calc(2 * var(--m-xl)) 0 var(--m-xl);
 }
 
 .footer a {
